# Workshop12-A2

./: Animal.h  CMakeLists.txt  Carnivore.cpp  Carnivore.h  Elephant.cpp  Elephant.h  Entity.h  EntityFactory.cpp  EntityFactory.h  Giraffe.cpp  Giraffe.h  Herbivore.cpp  Herbivore.h  Hippo.cpp  Hippo.h  Human.cpp  Human.h  Hyena.cpp  Hyena.h  Lion.cpp  Lion.h  Workshop12-A2.cpp  Workshop12-A2.h
